# ROSTemplate

./: generate.py  readme.md
roscpp-template/: CMakeLists.txt  package.xml
roscpp-template/config/: template.yaml
roscpp-template/include/: template.hpp
roscpp-template/src/: main.cpp  template.cpp
