<?xml version="1.0"?>
<package format="2">
  <name>template</name>
  <version>0.0.0</version>
  <description>Simple template node</description>
  <maintainer email="y734493541@gmail.com">yanis</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <!--Other depends-->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>
